<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_spacing">


    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_marginBottom="@dimen/common_spacing"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toTopOf="@id/barrier1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:layout_editor_absoluteX="88dp"
        tools:text="@string/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintBottom_toTopOf="@id/barrier1"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/author"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:layout_editor_absoluteX="88dp"
        tools:text="@string/published" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar, published, menu" />

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:background="@android:color/transparent"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_more_vert_24" />

    <TextView
        android:id="@+id/post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        android:text="@string/post"
        app:layout_constraintBottom_toTopOf="@id/barrier2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier1" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="post" />

    <ImageButton
        android:id="@+id/likeButton"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_marginTop="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier2"
        app:srcCompat="@drawable/baseline_favorite_24" />

    <TextView
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/likes"
        app:layout_constraintBottom_toBottomOf="@+id/likeButton"
        app:layout_constraintStart_toEndOf="@+id/likeButton"
        app:layout_constraintTop_toTopOf="@+id/likeButton" />

    <ImageButton
        android:id="@+id/shareButton"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_marginStart="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/likeButton"
        app:layout_constraintStart_toEndOf="@+id/likes"
        app:layout_constraintTop_toTopOf="@+id/likeButton"
        app:srcCompat="@drawable/baseline_share_24" />

    <TextView
        android:id="@+id/shares"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/shares"
        app:layout_constraintBottom_toBottomOf="@+id/likeButton"
        app:layout_constraintStart_toEndOf="@+id/shareButton"
        app:layout_constraintTop_toTopOf="@+id/likeButton" />

    <ImageButton
        android:id="@+id/viewButton"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_marginEnd="5dp"
        android:background="@android:color/transparent"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/likeButton"
        app:layout_constraintEnd_toStartOf="@+id/views"
        app:layout_constraintTop_toTopOf="@+id/likeButton"
        app:srcCompat="@drawable/baseline_eye_24" />

    <TextView
        android:id="@+id/views"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/views"
        app:layout_constraintBottom_toBottomOf="@+id/likeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/likeButton" />

</androidx.constraintlayout.widget.ConstraintLayout>